dist/1.0/bin/sample/retrieveUnpackaged/objects/Attachement_Back_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Hash__c</fullName>
        <externalId>true</externalId>
        <label>Attachment Hash</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Name of file</description>
        <label>File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simplified Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Indicates Back Reference valid time</description>
        <label>Valid To</label>
        <type>DateTime</type>
    </fields>
    <label>Attachement Back Reference</label>
    <nameField>
        <label>Attachement Back Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachement Back References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>